<resources>
    <string name="app_name">Majdnem Ibiza</string>
    <!--facebook auth data-->
    <string name="facebook_app_id">296443651086920</string>
    <string name="fb_login_protocol_scheme">fb296443651086920</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cast">Szereplők</string>
    <string name="movies">Filmek</string>
    <string name="weather">Időjárás</string>
    <string name="news">Hírek</string>
    <string name="question">Kérdés</string>
    <string name="answer_option">Válaszlehetőség</string>
    <string name="multiple_choice">Több válaszlehetőség is megjelölhető</string>
    <string name="create_poll">Szavazás létrehozása</string>
    <string name="poll">Szavazás</string>
    <string name="send">Küldés</string>
    <string name="results_are_public">Az eredmények nyilvánosak</string>
    <string name="poll_closed">A szavazás lezárult</string>
    <string name="close_poll">Szavazás lezárása</string>
    <string name="open_poll">Szavazás megnyitása</string>
    <string name="new_poll">Új szavazás</string>
    <string name="remove_poll">Szavazás törlése</string>
    <string name="front_page">Főoldal</string>
    <string name="logout">Kijelentkezés</string>
    <string name="continue_to_front_page">Tovább a Főoldalra</string>
    <string name="go_to_change_user">Belépés más néven</string>
    <string name="again">Random tóruszlény</string>
    <string name="task">Feladat</string>
    <string name="task_description">Feladat leírása</string>
    <string name="number_of_volunteers">Résztvevők száma:</string>
    <string name="open_task">Feladat megnyitása</string>
    <string name="close_task">Feladat lezárása</string>
    <string name="assign_participants">Résztvevők hozzárendelése</string>
    <string name="waiting_for_volunteers">Várakozás önként jelentkezőkre</string>
    <string name="pick_participants">Résztvevők kisorsolása</string>
    <string name="create_task">Feladat létrehozása</string>
    <string name="deadline">Várakozási idő:</string>
    <string name="hours">óra</string>
    <string name="person">fő</string>
    <string name="tasks">Feladatok</string>
    <string name="apply">Jelentkezés</string>
    <string name="receipts">Receptek</string>
    <string name="paid">Fizetett</string>
    <string name="new_cost_item">Fizetési tétel</string>
    <string name="item_description">Tétel megnevezése</string>
    <string name="create_item">Mentés</string>
    <string name="cost_total">Teljes összeg</string>
    <string name="costs">Pénzügyek</string>
    <string name="anonim_message">Társadalmi célú anonim üzenet</string>
    <string name="internet_connection_error">Internet connection is unavailable!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_xy">Üdv, %1$s!</string>

    <string name="scanner_hint">Olvass be egy QR kódot a csapat egyik résztvevőjétől!</string>
    <string name="group_connection_error_msg">Valami probléma adódott az azonosítás során! Próbáld újra később!</string>
    <string name="group_connection_qr_error_msg">A beszkennelt QR code nem érvényes!</string>
    <string name="connect_to_group">Csatlakozás a(z) %1$s csoporthoz</string>
    <string name="password">jelszó</string>
    <string name="check">Ellenőriz</string>
    <string name="set_deadline">Határidő beállítása</string>
    <string name="share_my_position">Aktuális hely megosztása</string>

</resources>
