<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/confirm_group_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/connect_to_group"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_group_pass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_group_title" />

    <TextView
        android:id="@+id/confirm_group_ok"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/check"
        android:background="@color/group_chooser"
        android:padding="4dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_group_pass"
        app:layout_constraintStart_toEndOf="@+id/confirm_group_pass"
        app:layout_constraintTop_toTopOf="@+id/confirm_group_pass" />

</android.support.constraint.ConstraintLayout>